Fixed alignment of search bar and filter dropdown options on results.html. Added a magnifying glass icon on search bar

--- a/Website files/styles/results-style.css
+++ b/Website files/styles/results-style.css
@@ -53,16 +53,39 @@ ul li:last-child {
   padding-right: 0;
 }
 
+#searchbar-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 3em;
+}
+
 .search-bar{
-    width: 1200px;          
-    height: 35px;          
-    position: relative;
-    left:125px;
-    top:20px;
+    width: 85%;          
+    height: 36px;          
+    text-align: center;
+    right: 0;
+    top: 0;
     padding: 0 10px;       
-    border: 1px solid #ccc; 
-    border-radius: 8px;    
+    border: none; 
+    border-radius: 8px 0 0 8px;    
     font-size: 16px;
+}
+
+#searchbar-container button {
+  height: 36px;
+  padding-right: 25px;
+  border: none;
+  color: gray;
+  background-color: white;
+  border-radius: 0 8px 8px 0;
+}
+
+#search-icon {
+  font-size: 35px;
+}
+
+#searchbar-container button:hover {
+  cursor: pointer;
 }
 
 .bar {
@@ -73,13 +96,17 @@ ul li:last-child {
   left: 0px;            
 }
 
+#dropdown-sorters {
+  display: flex;
+  margin-top: 2em;
+  margin-left: 8em;
+  justify-content: left;
+}
 
-#multi-select{
-  width: 100px;
-  position:relative;
-  top:60px;
-  right:70%;
-  border-radius: 5px;
+.multi-select{
+  margin-left: 2em;
+  padding: 7px;
+  border-radius: 10px;
 }
 
 input{
